# MonzoPy

./: README.md  auth.py  error.py  main.py  monzo.py  requirements.txt  setup.cfg
src/: .gitignore
src/classes/: auth.py  monzo.py
src/monzopy/classes/: auth.py  error.py
src/monzopy/functions/: util_functions.py
