[metadata]
name = monzopy
version = 0.0.1
author = Jia Wei Kho
description = A python package to make requests to the monzo developers api
long_description = This is a longer description for the project
url = https://github.com/Errorspaces/MonzoPy
keywords = sample, example, setuptools
[options]
python_requires= >=3.9.15
install_requires = file: requirements.txt
packages_dir=
    =src
packages=find:
[options.packages.find]
where=src
install_requires = 
    python
    numpy 
    scipy 
    pandas
    matplotlib
[options.extras_require]
test = 
    pytest
    coverage
[options.package_data]
sample = 